# slightjs

./: .gitignore  Cargo.toml  Makefile  README.md  install.ps1  install.sh  slightjs_engine.wasm
.github/workflows/: ci.yaml  ci.yml  release.yaml
cli/: Cargo.toml
cli/src/: main.rs
engine/: Cargo.toml
engine/src/: dynamic.rs  dynamic.rs.bak  generator.rs  lib.rs  slight_blob_store.rs  slight_configs.rs  slight_distributed_locking.rs  slight_http_client.rs  slight_http_server.rs  slight_http_types.rs  slight_keyvalue.rs  slight_messaging.rs  slight_sql.rs
examples/: host-test.js  slight-test.js  test.js
examples/app/backend/: index.js  slightfile.toml
examples/app/frontend/: index.html
examples/blob-store/: index.js
examples/configs/: index.js
examples/distributed-locking/: index.js  slightfile.toml
examples/http-client/: index.js  slightfile.toml
examples/http-server/: index.js  slightfile.toml
examples/keyvalue/: index.js  slightfile.toml
examples/messaging/: index.js  slightfile.toml
examples/sql/: index.js
runtime/: Cargo.toml
runtime/src/: main.rs
ts-wit-bindgen/: grammar.js  grammar.pegjs  ts-wit-bindgen.js
wit/: altered_keyvalue.wit  host.wit  keyvalue.wit  test.wit
