[package]
name = "slightjs-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1.0.68"
quickjs-wasm-rs = { git = "https://github.com/shopify/javy" }
quickjs-wasm-sys = { git = "https://github.com/shopify/javy" }
once_cell = "1.4.0"
send_wrapper = "0.6.0"
regex = "1.7.1"
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", tag = "v0.2.0" }