[package]
name = "slightjs-engine"
version = "0.1.0"
edition = "2021"
authors = [ "Dan Chiarlone" ]

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
quickjs-wasm-rs = "0.1"
once_cell = "1.4"
send_wrapper = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
wit-bindgen-rust = { git = "https://github.com/fermyon/wit-bindgen-backport" }